--- a/Landing page online course/style/styles.css
+++ b/Landing page online course/style/styles.css
@@ -20,6 +20,7 @@ header{
     padding: 20px;
     text-align: center;
     font-family: var(--font-family);
+    display: block;
 }
 
 #top-employers{
@@ -27,7 +28,9 @@ header{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
 }
-
+ #top{
+    color: var(--button-color);
+ }
 
 
 
@@ -102,11 +105,14 @@ h1{
 button{
     background-color: var(--button-color);
     color: var(--color);
-    padding: 10px 20px;
+    padding: 15px 40px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-family: var(--font-family);
+    font-size: 14px;
+    margin-bottom: 15px;
+
 }
 
 #plans-container{
