--- a/Landing page online course/style/styles.css
+++ b/Landing page online course/style/styles.css
@@ -259,7 +259,8 @@ footer{
 
 }
 .member-card{
-    margin: 20px;
+    margin: 30px;
+    margin-left: 20px;
 }
 #plans-container #most{
     background-color: var(--button-color);
