--- a/Calculator/style/styles.css
+++ b/Calculator/style/styles.css
@@ -8,8 +8,8 @@ body  {
 
 #calcualte2{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr  1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr 1fr 1fr ;
     
     border-radius: 10px;
     width: 50%;
@@ -40,7 +40,7 @@ button:hover{
 }
 
 #equal{
-    grid-column: 1/6;
+    grid-column: 1/5;
 }
 
 
