--- a/Landing page online course/style/styles.css
+++ b/Landing page online course/style/styles.css
@@ -177,6 +177,23 @@ h1{
     grid-template-columns: 1fr 1fr 1fr 1fr ;
     gap: 20px;
 }
+#percentage p{
+    text-align: center;
+    font-size: 20px;
+    color: var(--button-color);
+   
+
+    
+}
+
+
+#money{
+    text-align: center;
+}
+
+#work #maintext{
+    text-align: center;
+}
 button{
     background-color: var(--button-color);
     color: var(--color);
